# iotlock

./: .gitignore  Dockerfile  MODEL_CARD.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
assets/: metrics.json  metrics_real.json
data/: README.md
data/sample/nbaiot/Danmini_Doorbell/: benign_traffic.csv  gafgyt_scan.csv  mirai_scan.csv
data/sample/nbaiot/Ecobee_Thermostat/: benign_traffic.csv  gafgyt_scan.csv  mirai_scan.csv
data/sample/nbaiot/SimpleHome_XCS7_1003_WHT_Security_Camera/: benign_traffic.csv  gafgyt_scan.csv  mirai_scan.csv
models/: iotlock-0.3.0.joblib
scripts/: benchmark_latency.py  download_data.py
src/: iotlock.py
src/iotlock/: __init__.py  __main__.py  animate.py  api.py  artifact.py  botnet_data.py  cli.py  detection.py  evaluate.py  leakage.py  mitigation_real_pipeline.py  simulation.py  topology.py  topology_real.py
tests/: test_api.py  test_artifact.py  test_botnet_data.py  test_cli.py  test_detection.py  test_evaluate.py  test_leakage.py  test_mitigation_real_pipeline.py  test_simulation.py  test_topology.py  test_topology_real.py
