[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "iotlock"
version = "0.2.0"
description = "IoT network resilience analysis: scale-free topology, centrality, and defensive mitigation"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "networkx",
    "numpy",
    "matplotlib",
    "pillow",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
iotlock = "iotlock.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
