[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "iotlock"
version = "0.2.0"
description = "IoT network resilience analysis: scale-free topology, centrality, and defensive mitigation"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "networkx==3.6.1",
    "numpy==2.4.6",
    "matplotlib==3.11.1",
    "pillow==12.3.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "pip-audit", "bandit"]

[project.scripts]
iotlock = "iotlock.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
