[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "iotlock"
version = "0.3.0"
description = "IoT network resilience analysis on real Internet Topology Zoo networks, and real N-BaIoT botnet detection, with a FastAPI deployment"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "networkx==3.6.1",
    "numpy==2.4.6",
    "matplotlib==3.11.1",
    "pillow==12.3.0",
    "pandas==3.0.5",
    "scikit-learn==1.9.0",
    "fastapi==0.139.2",
    "uvicorn==0.51.0",
    "pydantic==2.13.4",
    "slowapi==0.1.10",
    "prometheus-client==0.25.0",
    "joblib==1.5.3",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "httpx", "pip-audit", "bandit"]

[project.scripts]
iotlock = "iotlock.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
